--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -5,6 +5,7 @@
 <table>
   <thead>
     <tr>
+      <th>Name</th>
       <th>Title</th>
       <th>Message</th>
       <th colspan="3"></th>
@@ -14,6 +15,7 @@
   <tbody>
     <% @messages.each do |message| %>
       <tr>
+        <td><%= message.name %></td>
         <td><%= message.title %></td>
         <td><%= message.message %></td>
         <td><%= link_to 'Show', message %></td>
