--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -1,6 +1,11 @@
 <p id="notice"><%= notice %></p>
 
 <p>
+  <strong>Name:</strong>
+  <%= @message.name %>
+</p>
+
+<p>
   <strong>Title:</strong>
   <%= @message.title %>
 </p>
