adding column age

--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -17,6 +17,11 @@
   </div>
 
   <div class="field">
+    <%= form.label :age %>
+    <%= form.text_field :age, id: :message_age %>
+  </div>
+
+  <div class="field">
     <%= form.label :title %>
     <%= form.text_field :title, id: :message_title %>
   </div>
