--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -6,6 +6,7 @@
   <thead>
     <tr>
       <th>Name</th>
+      <th>Age</th>
       <th>Title</th>
       <th>Message</th>
       <th colspan="3"></th>
@@ -16,6 +17,7 @@
     <% @messages.each do |message| %>
       <tr>
         <td><%= message.name %></td>
+        <td><%= message.age %></td>
         <td><%= message.title %></td>
         <td><%= message.message %></td>
         <td><%= link_to 'Show', message %></td>
